# MemLib

./: .clang-format  .gitignore  CMakeLists.txt  MemLib.sln  MemLib.vcxproj  MemLib.vcxproj.filters  Readme.md  dllmain.cpp
MemLib/: Events.h  Helpers.h  Hooks.h  MemLib.h  Memory.h  Module.h  Scanner.h
MemLib/MinHook/: hook.c
documentation/: CMakeLists.txt
documentation/pages/: about.dox
include/memlib/: Helpers.h  Hooks.h  MemLib.h  Memory.h  Modules.h  Scanner.h  Types.h
source/: MemLib.cpp
